// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asyncAll.njk - nunjucks-verify: asyncAll.njk 1`] = `
<div>Foo</div>

{% asyncAll item in items %}
<div></div> {% endall %}

{% asyncAll key, value in items %}
  <div></div> {% endall %}

{% asyncAll item in items %} <div><span>Foo</span></div> {% endall %}

{% asyncAll item in items %}{% set bar = 'true' %}{% endall %}

<div {% asyncAll item in items %}class="attribute"{% endall %}></div>

<div
{% asyncAll item in items %}
class="attribute"
{% endall %}></div>

<div>

{% asyncAll item in items %}<div>bar</div>{% else %}<div>foo</div>{% endall %}
</div>

{% asyncAll item in items %}
{% asyncAll item2 in items2 %}
{% endall %}
{% endall %}

{% asyncAll item in items %}
<div>{{ item }}</div>
{% else %}
{% asyncAll item2 in items2 %}
{% endall %}
{% endall %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>Foo</div>

{% asyncAll item in items %}
  <div></div>
{% endall %}

{% asyncAll key, value in items %}
  <div></div>
{% endall %}

{% asyncAll item in items %}
  <div><span>Foo</span></div>
{% endall %}

{% asyncAll item in items %}
  {% set bar = "true" %}
{% endall %}

<div {% asyncAll item in items %} class="attribute" {% endall %}></div>

<div {% asyncAll item in items %} class="attribute" {% endall %}></div>

<div>
  {% asyncAll item in items %}
    <div>bar</div>
  {% else %}
    <div>foo</div>
  {% endall %}
</div>

{% asyncAll item in items %}
  {% asyncAll item2 in items2 %} {% endall %}
{% endall %}

{% asyncAll item in items %}
  <div>{{ item }}</div>
{% else %}
  {% asyncAll item2 in items2 %} {% endall %}
{% endall %}

`;

exports[`asyncEach.njk - nunjucks-verify: asyncEach.njk 1`] = `
<div>Foo</div>

{% asyncEach item in items %}
<div></div> {% endeach %}

{% asyncEach key, value in items %}
  <div></div> {% endeach %}

{% asyncEach item in items %} <div><span>Foo</span></div> {% endeach %}

{% asyncEach item in items %}{% set bar = 'true' %}{% endeach %}

<div {% asyncEach item in items %}class="attribute"{% endeach %}></div>

<div
{% asyncEach item in items %}
class="attribute"
{% endeach %}></div>

<div>

{% asyncEach item in items %}<div>bar</div>{% else %}<div>foo</div>{% endeach %}
</div>

{% asyncEach item in items %}
{% asyncEach item2 in items2 %}
{% endeach %}
{% endeach %}

{% asyncEach item in items %}
<div>{{ item }}</div>
{% else %}
{% asyncEach item2 in items2 %}
{% endeach %}
{% endeach %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>Foo</div>

{% asyncEach item in items %}
  <div></div>
{% endeach %}

{% asyncEach key, value in items %}
  <div></div>
{% endeach %}

{% asyncEach item in items %}
  <div><span>Foo</span></div>
{% endeach %}

{% asyncEach item in items %}
  {% set bar = "true" %}
{% endeach %}

<div {% asyncEach item in items %} class="attribute" {% endeach %}></div>

<div {% asyncEach item in items %} class="attribute" {% endeach %}></div>

<div>
  {% asyncEach item in items %}
    <div>bar</div>
  {% else %}
    <div>foo</div>
  {% endeach %}
</div>

{% asyncEach item in items %}
  {% asyncEach item2 in items2 %} {% endeach %}
{% endeach %}

{% asyncEach item in items %}
  <div>{{ item }}</div>
{% else %}
  {% asyncEach item2 in items2 %} {% endeach %}
{% endeach %}

`;

exports[`for.njk - nunjucks-verify: for.njk 1`] = `
<div>Foo</div>

{% for item in items %}
<div></div> {% endfor %}

{% for key, value in items %}
  <div></div> {% endfor %}

{% for item in items %} <div><span>Foo</span></div> {% endfor %}

{% for item in items %}{% set bar = 'true' %}{% endfor %}

<div {% for item in items %}class="attribute"{% endfor %}></div>

<div
{% for item in items %}
class="attribute"
{% endfor %}></div>

<div>

{% for item in items %}<div>bar</div>{% else %}<div>foo</div>{% endfor %}
</div>

{% for item in items %}
{% for item2 in items2 %}
{% endfor %}
{% endfor %}

{% for item in items %}
<div>{{ item }}</div>
{% else %}
{% for item2 in items2 %}
{% endfor %}
{% endfor %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>Foo</div>

{% for item in items %}
  <div></div>
{% endfor %}

{% for key, value in items %}
  <div></div>
{% endfor %}

{% for item in items %}
  <div><span>Foo</span></div>
{% endfor %}

{% for item in items %}
  {% set bar = "true" %}
{% endfor %}

<div {% for item in items %} class="attribute" {% endfor %}></div>

<div {% for item in items %} class="attribute" {% endfor %}></div>

<div>
  {% for item in items %}
    <div>bar</div>
  {% else %}
    <div>foo</div>
  {% endfor %}
</div>

{% for item in items %}
  {% for item2 in items2 %} {% endfor %}
{% endfor %}

{% for item in items %}
  <div>{{ item }}</div>
{% else %}
  {% for item2 in items2 %} {% endfor %}
{% endfor %}

`;
